# public/openapi.yaml
@@ -81,7 +81,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ExecResult'
-  /write-file: {}
+  /write-file:
+    get:
+      summary: Write a file
+      description: Write a file
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                app_name:
+                  type: string
+                  description: Name of the app where the file will be written
+                path:
+                  type: string
+                  description: Path inside the app where the file will be written
+                contents:
+                  type: string
+                  description: Contents of the file to be written
+              required:
+              - app_name
+              - path
+              - contents
 info:
   title: Chat Dokku
   version: 1.0.0
